//修复 注入依赖失败